network-policy/calico-network-policies.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: yaobank-dns
  namespace: yaobank
spec:
  egress:
    - action: Allow
      protocol: UDP
      destination:
        ports:
          - 53
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: database
  namespace: yaobank
spec:
  selector: app == 'database'
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: app == 'summary'
      destination:
        ports:
          - 2379
  egress:
    - action: Allow
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: summary
  namespace: yaobank
spec:
  selector: app == 'summary'
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: app == 'customer'
      destination:
        ports:
          - 80
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'database'
        ports:
          - 2379
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: customer
  namespace: yaobank
spec:
  selector: app == 'customer'
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 80
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'summary'
        ports:
          - 80
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: loadgenerator
  namespace: yaobank
spec:
  selector: app == 'loadgenerator'
  egress:
    - action: Allow
      protocol: TCP
      destination:  
        selector: app == 'customer'
        ports:
          - 80
